add translation for slick slider include file

--- a/_includes/slick_slider.html
+++ b/_includes/slick_slider.html
@@ -6,4 +6,5 @@
     <img src="{{ site.baseurl }}/assets/images/flier.jpg">
   </div>
   <!-- <p>Research design prototyping and testing.</p> -->
+  <!-- <p>{{ site.data["lang"]["slick"]["description"] }}</p> -->
 </div>
