--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,5 +1,6 @@
 <div class="column">
-    <h2>Ultime news dal blog <em>{{ include.category }}</em></h2>
+    <!-- <h2>Ultime news dal blog<em> {{ include.category }}</em></h2> -->
+    <h2>{{ site.data["lang"]["news"]["latest_news"] }}<em> {{ include.category }}</em></h2>
 
     <div class="row" style="border: none;">
       <!-- if a category is specified print the news of the specified category only -->
@@ -10,7 +11,7 @@
             <img src="{{ post.image }}">
           </a>
           <h3>{{ post.title }}</h3>
-          <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a></p>
+          <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>{{ site.data["lang"]["global"]["read-more-post"] }} &raquo;</em></a></p>
         </div>
         {% endfor %}
 
@@ -25,7 +26,7 @@
               <img src="{{ post.image }}">
             </a>
             <h3>{{ post.title }}</h3>
-            <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>leggi tutto »</em></a></p>
+            <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>{{ site.data["lang"]["global"]["read-more-post"] }} &raquo;</em></a></p>
           </div>
         {% endfor %}
 
@@ -34,7 +35,7 @@
 
     <p>
       <a href="{{ site.baseurl }}/blog">
-        <em>Tutte le news »</em>
+        <em>{{ site.data["lang"]["news"]["link_to_blog"] }} &raquo;</em>
       </a>
     </p>
 
