make lang tags snake case

--- a/_includes/video.html
+++ b/_includes/video.html
@@ -12,6 +12,6 @@
     <a class="more" href="{{ site.baseurl }}/about"><em>Scopri di più &raquo;</em></a>
   </p> -->
   <p>
-    <a class="more" href="{{ site.baseurl }}/about"><em>{{ site.data["lang"]["global"]["read-more"] }} &raquo;</em></a>
+    <a class="more" href="{{ site.baseurl }}/about"><em>{{ site.data["lang"]["global"]["read_more"] }} &raquo;</em></a>
   </p>
 </div>
