--- a/_includes/news.html
+++ b/_includes/news.html
@@ -11,7 +11,7 @@
             <img src="{{ post.image }}">
           </a>
           <h3>{{ post.title }}</h3>
-          <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>{{ site.data["lang"]["global"]["read-more-post"] }} &raquo;</em></a></p>
+          <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>{{ site.data["lang"]["global"]["read_more_post"] }} &raquo;</em></a></p>
         </div>
         {% endfor %}
 
@@ -26,7 +26,7 @@
               <img src="{{ post.image }}">
             </a>
             <h3>{{ post.title }}</h3>
-            <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>{{ site.data["lang"]["global"]["read-more-post"] }} &raquo;</em></a></p>
+            <p>{{ post.subtitle }}... <a href="{{ site.baseurl }}{{ post.url }}"><br><em>{{ site.data["lang"]["global"]["read_more_post"] }} &raquo;</em></a></p>
           </div>
         {% endfor %}
 
