--- a/_includes/license.html
+++ b/_includes/license.html
@@ -4,7 +4,8 @@
   <p>This is some text about the license</p>
 </div> -->
 <div class="column">
-  <h2>Open Source</h2>
+  <!-- <h2>Open Source</h2> -->
+  <h2>{{ site.data["lang"]["license"]["title"] }}</h2>
   <!-- <img src="{{ site.baseurl }}/assets/OC-OpenSource-logo.svg"> -->
   <p>Software - <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License</a></p>
   <!-- <img src="{{ site.baseurl }}/assets/OC-Ohw-logo.svg"> -->
