add translation for contribute include file

--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -1,8 +1,9 @@
 <div class="column">
-  <h2>How to contribute</h2>
+  <!-- <h2>How to contribute</h2> -->
+  <h2>{{ site.data["lang"]["contribute"]["title"] }}</h2>
   <ul>
-    <li>Contribute 1</li>
-    <li>Contribute 2</li>
-    <li>Contribute 3</li>
+    <li>{{ site.data["lang"]["contribute"]["contribute_1"] }}</li>
+    <li>{{ site.data["lang"]["contribute"]["contribute_2"] }}</li>
+    <li>{{ site.data["lang"]["contribute"]["contribute_3"] }}</li>
   </ul>
 </div>
