--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -1,37 +1,17 @@
 <!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
 <h1>{{ site.data["lang"]["topics"]["title"] }}</h1>
 <div class="row" style="border-bottom: none;">  
-  <div class="column topics">
-    <a href="{{ site.baseurl }}/chiamata">
-      <img src="{{ site.baseurl }}/assets/images/device-custom.png">
-      <!-- <h3>La chiamata</h3> -->
-      <h3>{{ site.data["lang"]["topics"]["title_1"] }}</h3>
-      <!-- <p style="color: #606c71;">Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p> -->
-      <p style="color: #606c71;">{{ site.data["lang"]["topics"]["description_1"] }}</p>
-      <!-- <a href="{{ site.baseurl }}/pages/chiamata"><br><em>leggi tutto »</em></a> -->
-      <a href="{{ site.baseurl }}/chiamata"><br><em>{{ site.data["lang"]["global"]["read_more"] }} &raquo;</em></a>
-    </a>
-  </div>
-  <div class="column topics">
-    <a href="{{ site.baseurl }}/procedura">
-      <img src="{{ site.baseurl }}/assets/images/procedura.png">
-      <!-- <h3>La procedura</h3> -->
-      <h3>{{ site.data["lang"]["topics"]["title_2"] }}</h3>
-      <!-- <p style="color: #606c71;">Snelliamo la procedura di regolamentarizzazione dei commercianti</p> -->
-      <p style="color: #606c71;">{{ site.data["lang"]["topics"]["description_2"] }}</p>
-      <!-- <a href="{{ site.baseurl }}/pages/procedura"><br><em>leggi tutto »</em></a> -->
-      <a href="{{ site.baseurl }}/procedura"><br><em>{{ site.data["lang"]["global"]["read_more"] }} &raquo;</em></a>
-    </a>
-  </div>
-  <div class="column topics">
-    <a href="{{ site.baseurl }}/comunicazione">
-      <img src="{{ site.baseurl }}/assets/images/sticker.png">
-      <!-- <h3>La comunicazione</h3> -->
-      <h3>{{ site.data["lang"]["topics"]["title_3"] }}</h3>
-      <!-- <p style="color: #606c71;">Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p> -->
-      <p style="color: #606c71;">{{ site.data["lang"]["topics"]["description_3"] }}</p>
-      <!-- <a href="{{ site.baseurl }}/pages/comunicazione"><br><em>leggi tutto »</em></a> -->
-      <a href="{{ site.baseurl }}/comunicazione"><br><em>{{ site.data["lang"]["global"]["read_more"] }} &raquo;</em></a>
-    </a>
-  </div>
+  {% for item in site.data["lang"]["topics"]["topic_column"] %}
+    <div class="column topics">
+      <a href="{{ site.baseurl }}/{{ item.link }}">
+        <img src="{{ site.baseurl }}/{{ item.img_url }}">
+        <h3>{{ item.title }}</h3>
+        <p style="color: #606c71;">{{ item.description }}</p>
+        <a href="{{ site.baseurl }}/{{ item.link }}"><br><em>{{ site.data["lang"]["global"]["read_more"] }} &raquo;</em></a>
+      </a>
+    </div>
+  {% endfor %}
 </div>
+
+
+
