--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,11 +1,13 @@
 ---
 layout: default
 type: archive
+published: true
+lang: site.data["active_lang"]
 ---
 
 <div class="archive-description"> 
-  <h1 class="archive-title">Archivio delle news nella categoria <em>"{{ page.category }}"</em></h1>
-  {{ content }}
+  <h1 class="archive-title">{{ site.data["lang"]["category"]["title"] }} <em>"{{ page.category }}"</em></h1>
+  <!-- {{ content }} -->
 </div>
 
 <div class="wrap">
@@ -15,7 +17,7 @@ type: archive
       {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
       {% unless year == this_year %}
         {% assign year = this_year %}
-        <h3>Anno {{ year }}</h3>
+        <h3>{{ site.data["lang"]["category"]["year"] }} {{ year }}</h3>
       {% endunless %}
       <article>
         <span>» </span>
