--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,14 @@
 ---
 
 layout: default
-
+lang: site.data["active_lang"]
 ---
 
 <div class="post-header">
   <h1>{{ page.title }}</h1>
   <span class="meta">{{ page.date | date_to_string }}</span>
   <span style="margin: 0 .5rem;">|</span>
-  <span class="category">category:
+  <span class="category">{{ site.data["lang"]["category"]["category"] }}:
       {% for category in page.categories %}
           <a href="{{site.baseurl}}/category/{{category}}" class="post-tag">
               {{ category }}
