--- a/_includes/return_to_top_button.html
+++ b/_includes/return_to_top_button.html
@@ -1,2 +1,2 @@
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"  type="text/css">
 <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
