add translation to nav. close https://github.com/opencarecc/rampette/issues/7

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <!-- This finds the current page so it can be highlighted. -->
-{% for entry in site.data.navigation %}
+{% for entry in site.data.lang.navigation %}
 {% capture fullurl %}{{ site.baseurl }}{{ entry.url }}{% endcapture %}
     {% if fullurl == page.url %}
         {% assign current_page = fullurl %}
