--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,6 +23,24 @@
             <input type="checkbox" id="nav-trigger" class="nav-trigger" />
             <label for="nav-trigger"></label>
 
+            <!-- Language picker stuff: IMPORTANT DO NOT MOVE -->
+            <div id="lang-picker">
+                <input type="checkbox" id="lang-trigger">
+                <label for="lang-trigger">
+                    <li class="dropdown">
+                        <span>{{ site.active_lang }}</span>
+                        <span class="lang-icon"><img src="../assets/OC-lang.svg"></span>
+                        <ul class="dropdown-content">
+                            {% for tongue in site.languages %}
+                                <li>
+                                    <a {% if tongue == site.active_lang %}style="font-weight: bold;"{% endif %} href="{% if tongue == site.default_lang %} {{site.baseurl}}{{page.url}} {% else %} {{site.baseurl}}/{{ tongue }}{{page.url}} {% endif %}">{{ tongue }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </li>               
+                </label>
+            </div>
+
             <ul>
             {% for entry in site.data.navigation %}
                 {% if entry.url == current_page %}
@@ -50,13 +68,6 @@
                 <li class="{{ current }}"><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>
                 {% endif %}
             {% endfor %}
-                
-            <!-- Language picker stuff-->
-            {% for tongue in site.languages %}
-                <li>
-                    <a {% if tongue == site.active_lang %}style="font-weight: bold;"{% endif %} href="{% if tongue == site.default_lang %} {{site.baseurl}}{{page.url}} {% else %} {{site.baseurl}}/{{ tongue }}{{page.url}} {% endif %}">{{ tongue }}</a>
-                </li>
-            {% endfor %}    
             </ul>
         </nav>
     </div>
