--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -187,7 +187,7 @@ nav .dropdown-content li {
 
 nav .dropdown-content li a,
 nav .current .dropdown-content li a {
-  border-bottom: 1px solid #f9f9f9;
+  border-bottom: 1px solid #f9f9f9; /* this is a fix to avoid the bouncing effect on the div */
 }
 
 nav .dropdown-content li a:hover,
@@ -196,7 +196,7 @@ nav .current .dropdown-content li a:hover {
   border-bottom: 1px solid #000099;
 }
 
-/*Dropdown trigger for mobile*/
+/* Dropdown trigger for mobile */
 #dropdown-trigger {
     display: block;
     /* critical styles - hide the checkbox input */
@@ -206,6 +206,63 @@ nav .current .dropdown-content li a:hover {
 
 .nav-trigger {
   display: none;
+}
+
+/* Language picker stuff */
+#lang-picker {
+  float: right;
+  margin-left: 1rem;
+}
+#lang-trigger {
+  display: none;
+}
+label[for="lang-trigger"] {
+  border: 1px solid #000099;
+  /*border-radius: 5px;*/
+  margin-left: .2rem;
+  padding: .2rem;
+  padding-bottom: .25rem;
+}
+/*nav #lang-picker .dropdown::after {
+  content: "";
+  display: inline-block;
+  border: none;
+  margin: 0;
+  background-image: url('../assets/OC-lang.svg');
+  background-size: 1rem 1rem;
+  background-repeat: no-repeat;
+  height: 1rem;
+  width: 1rem;  
+}*/
+nav #lang-picker .dropdown::after {
+  content: '';
+  display: none;
+}
+.lang-icon img {
+  float: right;
+  margin-left: .3rem;
+}
+#lang-picker .dropdown {
+  margin: 0 .5em 0 .6rem;
+}
+#lang-picker .dropdown-content {
+  background-color: #000099;
+  max-width: 3.5rem;
+  margin: 0 auto;
+  margin-left: -1rem;
+  text-align: center;
+}
+#lang-picker .dropdown-content li {
+  text-align: center;
+}
+#lang-picker .dropdown-content li a {
+  color: #f9f9f9;
+}
+#lang-picker .dropdown-content li a {
+  border-bottom: 1px solid #000099; /* this is a fix to avoid the bouncing effect on the div */
+}
+#lang-picker .dropdown-content li a:hover {
+  border-bottom: 1px solid #f9f9f9;
 }
 
 
@@ -244,6 +301,10 @@ nav .current .dropdown-content li a:hover {
   }
   nav ul {
     padding-top: 1rem;
+  }
+
+  #lang-picker {
+    margin-top: 1rem;
   }
 }
 
@@ -284,6 +345,10 @@ nav .current .dropdown-content li a:hover {
   }
   nav ul {
     padding-top: .7rem;
+  }
+
+  #lang-picker {
+    margin-top: .7rem;
   }
 }
 
@@ -461,6 +526,30 @@ header {
     margin-top: .3rem;
     /*border: none;*/
     /*background-color: rgba(255,255,255,.95);*/
+  }
+
+
+
+  /* Language picker stuff */
+  label[for="lang-trigger"] {
+    /* critical positioning styles */
+    position: absolute;
+    right: 3.7rem;
+    top: 1.4rem;
+    z-index: 2;
+    /*background-color: red;*/
+    /*border: 1px solid red;*/
+  }
+  #lang-trigger:checked + label[for="lang-trigger"] > li.dropdown > ul.dropdown-content {
+    display: block; 
+    position: absolute; 
+    top: 2rem;  
+  }
+  #lang-picker .dropdown-content {
+    margin-left: 0;
+  }
+  #lang-picker .dropdown-content li {
+    border: none;
   }
 }
 
