fix language picker style

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -28,7 +28,7 @@
                 <input type="checkbox" id="lang-trigger">
                 <label for="lang-trigger">
                     <li class="dropdown">
-                        <span>{{ site.active_lang }}</span>
+                        <span class="lang">{{ site.active_lang }}</span>
                         <span class="lang-icon"><img src="../assets/OC-lang.svg"></span>
                         <ul class="dropdown-content">
                             {% for tongue in site.languages %}
