--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -114,7 +114,7 @@ header.shrink {
   padding: 2rem 4rem;
   /*background: rgba(255,255,255,.5);*/
   display: block;
-  overflow: hidden;
+  /*overflow: hidden;*/
   margin: 0 auto;
 }
 
@@ -125,6 +125,11 @@ nav ul {
   margin: 0;
   float: right;
   width: initial;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
 }
 
 nav li,
@@ -136,6 +141,11 @@ nav li.dropdown {
   font-size: .9rem;
   color: #000099;
   cursor: pointer;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
 }
 nav li.dropdown {
   padding-bottom: .15rem;
@@ -181,6 +191,10 @@ nav .dropdown-content {
   text-align: left;
 }
 
+header.shrink nav ul.dropdown-content {
+  padding: .2rem;
+}
+
 nav .dropdown-content li {
   padding: .5rem 0; 
 }
@@ -212,16 +226,23 @@ nav .current .dropdown-content li a:hover {
 #lang-picker {
   float: right;
   margin-left: 1rem;
+  outline: 1px solid #000099;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
 }
 #lang-trigger {
   display: none;
 }
 label[for="lang-trigger"] {
-  border: 1px solid #000099;
+  /*border: 1px solid #000099;*/
   /*border-radius: 5px;*/
-  margin-left: .2rem;
-  padding: .2rem;
-  padding-bottom: .25rem;
+  /*margin-left: .2rem;*/
+  /*padding: .2rem;*/
+  /*padding-bottom: .25rem;*/
+  padding: 0;
 }
 /*nav #lang-picker .dropdown::after {
   content: "";
@@ -238,22 +259,66 @@ nav #lang-picker .dropdown::after {
   content: '';
   display: none;
 }
-.lang-icon img {
+/*.lang-icon img {
   float: right;
   margin-left: .3rem;
-}
+}*/
 #lang-picker .dropdown {
-  margin: 0 .5em 0 .6rem;
+  position: relative;
+  /*margin: 0 .5em 0 .6rem;*/
+  margin: 0;
+  /*padding-bottom: .1rem;*/
+      display: flex;
+    flex-direction: row;
+    padding-bottom: .05rem;
+    -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
+}
+#lang-picker .dropdown span {
+  display: inline-block;
+  margin: .2rem .4rem 0;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
+}
+#lang-picker .dropdown .lang {
+  /*float: left;*/
+}
+#lang-picker .dropdown .lang-icon {
+  /*float: right;*/
+  margin-left: .2rem;
+}
+#lang-picker .dropdown .lang-icon img {
+  float: none;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  -ms-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
 }
 #lang-picker .dropdown-content {
   background-color: #000099;
-  max-width: 3.5rem;
+  /*max-width: 3.5rem;*/
   margin: 0 auto;
-  margin-left: -1rem;
+  /*margin-left: -.5rem;*/
   text-align: center;
+  width: 100%;
+  top: 1.9rem;
+  left: 0;
+  right: 0;
+  outline: 1px solid #000099;
+  padding: .8rem;
 }
 #lang-picker .dropdown-content li {
   text-align: center;
+  display: block;
+  margin: 0;
+  padding: .3rem 0;
 }
 #lang-picker .dropdown-content li a {
   color: #f9f9f9;
@@ -264,6 +329,22 @@ nav #lang-picker .dropdown::after {
 #lang-picker .dropdown-content li a:hover {
   border-bottom: 1px solid #f9f9f9;
 }
+header.shrink #lang-picker {
+    margin-top: .35rem
+  }
+  header.shrink #lang-picker .dropdown {
+    padding-bottom: 0;
+  }
+  header.shrink #lang-picker .dropdown span {
+    font-size: .7rem;
+    letter-spacing: .05rem;
+  }
+  header.shrink #lang-picker .dropdown .lang-icon img {
+    max-width: 1rem;
+  }
+  header.shrink #lang-picker .dropdown-content {
+    top: 1.5rem;
+  }
 
 
 /* NAVIGATION BAR media queries */
@@ -304,8 +385,9 @@ nav #lang-picker .dropdown::after {
   }
 
   #lang-picker {
-    margin-top: 1rem;
+    margin-top: .9rem;
   }
+  
 }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
@@ -348,7 +430,7 @@ nav #lang-picker .dropdown::after {
   }
 
   #lang-picker {
-    margin-top: .7rem;
+    margin-top: .5rem;
   }
 }
 
@@ -543,7 +625,7 @@ header {
   #lang-trigger:checked + label[for="lang-trigger"] > li.dropdown > ul.dropdown-content {
     display: block; 
     position: absolute; 
-    top: 2rem;  
+    top: 2rems;  
   }
   #lang-picker .dropdown-content {
     margin-left: 0;
