--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -475,7 +475,8 @@ header {
     letter-spacing: .02rem;
   }
   header.shrink nav ul {
-    padding-top: .2rem;
+    /*padding-top: .2rem;*/
+    padding: .2rem 0 0 0!important;
   }
   header.shrink nav ul li {
     font-size: .7rem;
@@ -594,7 +595,7 @@ header {
     padding: .2rem 1.2rem 1.2rem 1.2rem;
     visibility: visible;
     opacity: 1;
-    background-color: rgba(255,255,255,.95);
+    /*background-color: rgba(255,255,255,.95);*/
   }
   header.shrink label[for="nav-trigger"] {
     top: .9rem;
@@ -607,31 +608,50 @@ header {
   header.shrink .nav-trigger:checked ~ ul {
     margin-top: .3rem;
     /*border: none;*/
-    /*background-color: rgba(255,255,255,.95);*/
+    background-color: rgba(255,255,255,.95);
   }
 
 
 
   /* Language picker stuff */
+  #lang-picker {
+        position: absolute;
+    float: none;
+    top: 1.55rem;
+    right: 3.8rem;
+  }
   label[for="lang-trigger"] {
     /* critical positioning styles */
-    position: absolute;
-    right: 3.7rem;
-    top: 1.4rem;
-    z-index: 2;
+    /*position: absolute;*/
+    /*right: 3.7rem;*/
+    /*top: 1.4rem;*/
+    /*z-index: 2;*/
     /*background-color: red;*/
     /*border: 1px solid red;*/
   }
   #lang-trigger:checked + label[for="lang-trigger"] > li.dropdown > ul.dropdown-content {
     display: block; 
     position: absolute; 
-    top: 2rems;  
+    top: 1.8rem;
+    border: none;  
+  }
+  #lang-picker .dropdown {
+    padding-bottom: 0;
   }
   #lang-picker .dropdown-content {
     margin-left: 0;
   }
   #lang-picker .dropdown-content li {
     border: none;
+  }
+  header.shrink #lang-picker {
+    margin-top: 0;
+    margin-top: 0;
+    top: .8rem;
+  }
+  header.shrink #lang-trigger + label[for="lang-trigger"] > li.dropdown > ul.dropdown-content {
+    top: 1.5rem;
+    padding: .8rem!important;
   }
 }
 
