untranslate home modules

--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -1,8 +1,16 @@
-<div class="column">
+<!-- <div class="column">
   <h2>{{ site.data["lang"]["contribute"]["title"] }}</h2>
   <ul>
     <li>{{ site.data["lang"]["contribute"]["contribute_1"] }}</li>
     <li>{{ site.data["lang"]["contribute"]["contribute_2"] }}</li>
     <li>{{ site.data["lang"]["contribute"]["contribute_3"] }}</li>
+  </ul>
+</div> -->
+<div class="column">
+  <h2>Come contribuire al progetto</h2>
+  <ul>
+    <li>Contribuire 1</li>
+    <li>Contribuire 2</li>
+    <li>Contribuire 3</li>
   </ul>
 </div>
