--- a/_includes/release_notes.html
+++ b/_includes/release_notes.html
@@ -1,4 +1,4 @@
-<div class="column">
+<!-- <div class="column">
   <h2>{{ site.data["lang"]["release_notes"]["title"] }}</h2>
   <ul>
     <li>{{ site.data["lang"]["release_notes"]["note_1"] }}</li>
@@ -9,5 +9,17 @@
     {% for item in site.data["lang"]["release_notes"]["more_link"] %}
       <a href="{{ item.link_html }}"><em>{{ item.text }} &raquo;</em></a>
     {% endfor %}
+  </p>
+</div> -->
+
+<div class="column">
+  <h2>Release 0.1 - 2016/09/12</h2>
+  <ul>
+    <li>Nota 1</li>
+    <li>Nota 2</li>
+    <li>Nota 3</li>
+  </ul>
+  <p>
+    <a href="{{ site.baseurl }}/about"><em>Maggiori informazioni &raquo;</em></a>
   </p>
 </div>
