--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,17 +1,21 @@
-<div class="column video">
+<!-- <div class="column video">
   <div class='embed-container'><iframe src='https://www.youtube.com/embed/bARoyq8Tnto' frameborder='0' allowfullscreen></iframe></div>
-  <!-- <h1>Cos'è open rampette?</h1> -->
   <h1>{{ site.data["lang"]["video"]["title"] }}</h1>
-  <!-- <p class="short-about">
-    open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href="http://opencare.cc" target="_blank">opencare</a>.
-  </p> -->
   <p class="short-about">
     {{ site.data["lang"]["video"]["description"] }} <a href="http://opencare.cc" target="_blank">opencare</a>.
   </p>
-  <!-- <p>
-    <a class="more" href="{{ site.baseurl }}/about"><em>Scopri di più &raquo;</em></a>
-  </p> -->
   <p>
     <a class="more" href="{{ site.baseurl }}/about"><em>{{ site.data["lang"]["global"]["read_more"] }} &raquo;</em></a>
+  </p>
+</div> -->
+
+<div class="column video">
+  <div class='embed-container'><iframe src='https://www.youtube.com/embed/bARoyq8Tnto' frameborder='0' allowfullscreen></iframe></div>
+  <h1>Cos'è open rampette?</h1>
+  <p class="short-about">
+    open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href="http://opencare.cc" target="_blank">opencare</a>.
+  </p>
+  <p>
+    <a class="more" href="{{ site.baseurl }}/about"><em>Scopri di più &raquo;</em></a>
   </p>
 </div>
