--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -1,5 +1,5 @@
 <!-- IMPORTANT: Please only change text and links. Leave the HTML structure unchanged -->
-<h1>{{ site.data["lang"]["topics"]["title"] }}</h1>
+<!-- <h1>{{ site.data["lang"]["topics"]["title"] }}</h1>
 <div class="row" style="border-bottom: none;">  
   {% for item in site.data["lang"]["topics"]["topic_column"] %}
     <div class="column topics">
@@ -11,7 +11,35 @@
       </a>
     </div>
   {% endfor %}
+</div> -->
+
+<h1>I temi trattati</h1>
+<div class="row" style="border-bottom: none;">  
+  <div class="column topics">
+    <a href="{{ site.baseurl }}/chiamata">
+      <img src="{{ site.baseurl }}/assets/images/device-custom.png">
+      <h3>La chiamata</h3>
+      <p style="color: #606c71;">Miglioriamo l'esperienza di utilizzo della rampa mobile a chiamata</p>
+      <a href="{{ site.baseurl }}/chiamata"><br><em>Scopri di più &raquo;</em></a>
+    </a>
+  </div>
+
+  <div class="column topics">
+    <a href="{{ site.baseurl }}/procedura">
+      <img src="{{ site.baseurl }}/assets/images/procedura.png">
+      <h3>La procedura</h3>
+      <p style="color: #606c71;">Snelliamo la procedura di regolamentarizzazione dei commercianti</p>
+      <a href="{{ site.baseurl }}/procedura"><br><em>Scopri di più &raquo;</em></a>
+    </a>
+  </div>
+
+  <div class="column topics">
+    <a href="{{ site.baseurl }}/comunicazione">
+      <img src="{{ site.baseurl }}/assets/images/sticker.png">
+      <h3>La comunicazione</h3>
+      <p style="color: #606c71;">Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo</p>
+      <a href="{{ site.baseurl }}/comunicazione"><br><em>Scopri di più &raquo;</em></a>
+    </a>
+  </div>
 </div>
-
-
 
