--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,13 @@
-{% assign lang = site.active_lang %}
+<!-- {% assign lang = site.active_lang %} -->
 <head>
   <meta charset="UTF-8">
-  {% if page.id %}
+  <!-- {% if page.id %}
     <title>{{ page.title }} &middot; {{ site.title[lang] }}</title>
   {% else %}
     <title>{{ page.title[lang] }} &middot; {{ site.title[lang] }}</title>
-  {% endif %}
+  {% endif %} -->
+
+  <title>{{ page.title }} &middot; {{ site.title }}</title>  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/normalize.css" media="screen">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
