--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,7 +6,8 @@ lang: site.data["active_lang"]
 ---
 
 <div class="archive-description"> 
-  <h1 class="archive-title">{{ site.data["lang"]["category"]["title"] }} <em>"{{ page.category }}"</em></h1>
+  <!-- <h1 class="archive-title">{{ site.data["lang"]["category"]["title"] }} <em>"{{ page.category }}"</em></h1> -->
+  <h1 class="archive-title">Archivio delle news nella categoria <em>"{{ page.category }}"</em></h1>
   <!-- {{ content }} -->
 </div>
 
@@ -17,7 +18,8 @@ lang: site.data["active_lang"]
       {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
       {% unless year == this_year %}
         {% assign year = this_year %}
-        <h3>{{ site.data["lang"]["category"]["year"] }} {{ year }}</h3>
+        <!-- <h3>{{ site.data["lang"]["category"]["year"] }} {{ year }}</h3> -->
+        <h3>Anno {{ year }}</h3>
       {% endunless %}
       <article>
         <span>» </span>
