--- a/_layouts/projectPage.html
+++ b/_layouts/projectPage.html
@@ -13,7 +13,8 @@
 
     <!--row con titolo, sottotitolo, descrizione breve e link a github\-->
     <div class="row">
-      <h1>{{ page.title[lang] }} </h1>
+      <!-- <h1>{{ page.title[lang] }} </h1> -->
+      <h1>{{ page.title }} </h1>
     </div>
     <div class="row">
       <h2>{{ page.subtitle }}</h2>
