--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,7 +8,7 @@
         {% assign current_page = fullurl %}
     {% endif %}
 {% endfor %} -->
-{% for entry in site.data.navigation %}
+{% for entry in site.data[page.lang].navigation %}
 {% capture fullurl %}{{ site.baseurl }}{{ entry.url }}{% endcapture %}
     {% if fullurl == page.url %}
         {% assign current_page = fullurl %}
@@ -21,7 +21,8 @@
 <!-- Then we build the nav bar. -->
 <header>
     <div id="nav-container">    
-        <a href="{{ site.baseurl }}/">
+        <!-- <a href="{{ site.baseurl }}/"> -->
+        <a href="{{ site.baseurl }}/{{ site.index[page.lang] }}">
             <img src="{{ site.baseurl }}/assets/OC-Logo-colortext.svg">
             <h1 class="site-name">
               {{site.name}}
@@ -51,7 +52,7 @@
             </div> -->
 
             <ul>
-            {% for entry in site.data.navigation %}
+            {% for entry in site.data[page.lang].navigation %}
                 {% if entry.url == current_page %}
                     {% assign current = 'current' %}
                 {% else %}
@@ -78,6 +79,14 @@
                 {% endif %}
             {% endfor %}
             </ul>
+
+            <div class="wrapper" style="text-align: right; line-height: 2em">
+              {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+              {% for post in posts %} <a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a> {% endfor %}
+
+              {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+              {% for page in pages %} <a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a> {% endfor %}
+            </div>
         </nav>
     </div>
 </header>
