--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1037,6 +1037,9 @@ a:last-of-type.btn:hover {
 .row div:last-of-type {
   padding-right: 0;
 }
+.column.tutorials {
+  max-width: 33%;
+}
 .column.tutorials a:hover {
   border: none;
   opacity: 0.7;
