fix footer translation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,13 +12,25 @@
   </div>
 </footer> -->
 
-<footer class="site-footer">
+<!-- <footer class="site-footer">
   <div class="column">
     <span class="owner">
       <a href="{{ site.baseurl }}/">{{site.name}} </a>is maintained by 
       <a href="https://opencare.cc">opencarecc</a>.
     </span>
     <p class="credits">This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670</p>
+  </div>
+  <div class="column">
+    <img src="http://opencarecc.github.io/MicroWebsiteTemplate/assets/OC-EC-H2020.jpg">
+  </div>
+</footer> -->
+
+<footer class="site-footer">
+  <div class="column">
+    <span class="owner">
+      <a href="{{ site.baseurl }}/">{{site.name}} </a>{{ site.data[page.lang].lang["footer"]["credits_line_html"] }}
+    </span>
+    <p class="credits">{{ site.data[page.lang].lang["footer"]["eu_agreement_line"] }}</p>
   </div>
   <div class="column">
     <img src="http://opencarecc.github.io/MicroWebsiteTemplate/assets/OC-EC-H2020.jpg">
