fix home header translation and style

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@
   <body>
     {% include return_to_top_button.html %}
     {% include navigation.html %}
+    <!-- {% include homeheader.html %} -->
 
     <section class="main-content">
       {{ content }}
