add release notes translation

--- a/_includes/release_notes.html
+++ b/_includes/release_notes.html
@@ -12,7 +12,7 @@
   </p>
 </div> -->
 
-<div class="column">
+<!-- <div class="column">
   <h2>Release 0.1 - 2016/09/12</h2>
   <ul>
     <li>Nota 1</li>
@@ -21,5 +21,19 @@
   </ul>
   <p>
     <a href="{{ site.baseurl }}/about"><em>Maggiori informazioni &raquo;</em></a>
+  </p>
+</div> -->
+
+<div class="column">
+  <h2>{{ site.data[page.lang].lang["release_notes"]["title"] }}</h2>
+  <ul>
+    {% for item in site.data[page.lang].lang["release_notes"]["notes"] %}
+      <li>{{ item.note }}</li>
+    {% endfor %}
+  </ul>
+  <p>
+    {% for item in site.data[page.lang].lang["release_notes"]["more_link"] %}
+      <a href="{{ item.link_html }}"><em>{{ item.text }} &raquo;</em></a>
+    {% endfor %}
   </p>
 </div>
