add slick slider translation

--- a/_includes/slick_slider.html
+++ b/_includes/slick_slider.html
@@ -1,10 +1,13 @@
 <div class="column">
   <div class="img_slider">
+    <!-- {% for item in site.data[page.lang].lang["slick"]["pics"] %}
+      <img src="{{ item.pic }}">
+    {% endfor %} -->
     <img src="https://farm5.staticflickr.com/4211/34767438573_c6c73445d7_z_d.jpg">
     <img src="https://farm5.staticflickr.com/4217/35189199200_654c462308_z_d.jpg">
     <img src="{{ site.baseurl }}/assets/images/usertest_procedura.jpg">
     <img src="{{ site.baseurl }}/assets/images/flier.jpg">
   </div>
   <!-- <p>Research design prototyping and testing.</p> -->
-  <!-- <p>{{ site.data["lang"]["slick"]["description"] }}</p> -->
+  <!-- <p>{{ site.data[page.lang].lang["slick"]["description"] }}</p> -->
 </div>
