fix post layout to avoid showing language as category

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,10 +12,14 @@ layout: default
   <!-- <span class="category">categoria: -->
   <span class="category">{{ site.data[page.lang].lang["category"]["category"] }}:
       {% for category in page.categories %}
+      {% if category == page.lang %}
+        {% continue %}
+      {% else %}
           <!-- <a href="{{site.baseurl}}/category/{{category}}" class="post-tag"> -->
           <a href="{{site.baseurl}}/categories/{{category}}" class="post-tag">
               {{ category }}
           </a>
+      {% endif %}
       {% endfor %}
   </span>
 </div>
